--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ appdirs==1.4.3
 async-timeout==3.0.1
 attrs==20.2.0
 CacheControl==0.12.6
+cachetools==4.1.1
 certifi==2019.11.28
 cffi==1.14.3
 chardet==3.0.4
@@ -12,21 +13,31 @@ cryptography==3.1.1
 distlib==0.3.0
 distro==1.4.0
 gidgethub==4.1.1
+google-auth==1.22.1
+google-auth-oauthlib==0.4.1
+gspread==3.6.0
 html5lib==1.0.1
+httplib2==0.18.1
 idna==2.8
 ipaddr==2.2.0
 lockfile==0.12.2
 msgpack==0.6.2
 multidict==4.7.6
+oauth2client==4.1.3
+oauthlib==3.1.0
 packaging==20.3
 pep517==0.8.2
 progress==1.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
 PyJWT==1.7.1
 pyparsing==2.4.6
 pytoml==0.1.21
 requests==2.22.0
+requests-oauthlib==1.3.0
 retrying==1.3.3
+rsa==4.6
 six==1.14.0
 uritemplate==3.0.1
 urllib3==1.25.8
